Fixed page spacing glitch and flex items

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -2,10 +2,13 @@
 @import 'fonts.scss';
 @import 'colors.scss';
 @import 'media.scss';
-.page {
-    position: absolute;
+html,
+body {
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .resImage {
@@ -18,11 +21,9 @@
     @include sm {
         margin-top: 200px;
     }
-
     @include below($screen-sm-min) {
         margin-top: 100px;
     }
-
     min-height: 300px;
     display: flex;
     flex-direction: row;
@@ -36,15 +37,12 @@
         align-content: center;
         align-items: center;
         width: 100%;
-
         @include sm {
             padding: 50px;
         }
-
         @include below($screen-sm-min) {
             padding: 10px;
         }
-
         .h1 {
             text-align: center;
         }
@@ -62,6 +60,7 @@
                 max-width: 500px;
                 padding: 10px;
                 display: flex;
+                flex-wrap: wrap;
                 flex-direction: column;
                 justify-content: center;
                 align-content: flex-start;
@@ -80,6 +79,7 @@
                 padding: 10px;
                 display: flex;
                 flex-direction: row;
+                flex-wrap: wrap;
                 justify-content: center;
                 align-content: center;
                 align-items: center;
@@ -124,48 +124,39 @@
     background-color: $cyanblue;
     color: white;
     min-height: 300px;
-
 }
 
 .socialMedia {
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-
     a {
         color: white;
         transition: .25s linear;
     }
-
     a:hover {
         color: $darkblue;
         transition: .25s linear;
     }
 }
 
-.footer{
+.footer {
     @include sm {
         margin-top: 200px;
     }
-
     @include below($screen-sm-min) {
         margin-top: 100px;
     }
-
     @include angle(before, true, 1.5deg);
-
     background-color: $darkblue;
     color: white;
-
     min-height: 100px;
-
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: flex-end;
-
     text-align: center;
     padding: 15px;
 }
