--- a/pages/navbar/navbar.scss
+++ b/pages/navbar/navbar.scss
@@ -13,7 +13,7 @@
         .toggler {
             position: fixed;
             top: 30px;
-            right: 25px;
+            right: 20px;
             .bar1,
             .bar2,
             .bar3 {
@@ -77,7 +77,7 @@
             }
             @include below($screen-sm-min) {
                 position: fixed;
-                width: 100vw;
+                width: 100%;
                 height: 0%;
                 top: 75px;
                 right: 0;
@@ -103,7 +103,7 @@
         }
         @include below($screen-sm-min) {
             .pagesExpanded.pages {
-                background-color: cornflowerblue;
+                background-color: #2a0afa;
                 position: fixed;
                 height: 100%;
                 top: 0;
